--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "ryb-color-mixer": "^0.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
